series of changes and fixes
